# pdf-chat

./: LICENSE  README.md
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/.github/workflows/: ci.yaml
backend/app/: main.py
backend/app/api/: health.py
backend/app/tests/: test_health.py
